# compre

./: .gitignore  LICENSE.md  README.md  SECURITY.md  config.toml  pyproject.toml  requirements.txt  run.spec  specification.md
data/: tree.txt
docs/: userDocumentation.txt
scr/: run.py
src/: run-Output.txt  run.py
